--- a/lib/erlang/cloudpanel/priv/www/index.html
+++ b/lib/erlang/cloudpanel/priv/www/index.html
@@ -42,88 +42,17 @@ pre i *{color:#090;}
     <div id="doc">
 
         <div id="header">
-            <h1><a href=".">Minimal Chat</a></h1>
-            <p>powered by MochiWeb.</p>
+            <h1><a href=".">PoolParty Cloud Panel</a></h1>
+            <p>powered by PoolParty.</p>
         </div>
         <div id="content">
-            <p class="nojs">JavaScript <strong>must</strong> be enabled to fully enjoy this game.</p>
-            <div id="chat">
-                <ol>
-                </ol>
-            </div>
-            <form id="chatter">
-                <label for="message">Message: </label>
-                <input type="text" name="message" id="message">
-                <input type="submit" class="submit" value="say it!">
-            </form>
         </div>
 
         <div id="footer">
-            <p>by <a href="http://yoan.dosimple.ch/">Ari Lerner</a>, doSimple 2008</p>
         </div>
     </div>
 <script type="text/javascript" src="javascripts/jquery.js"></script>
 <script type="text/javascript" id="script">
-(function($) {
-    $(document).ready(function() {
-        var url = "/chat";
-
-        $("#chat").bind("message", function(event, message) {
-            $(this).triggerHandler("append", [message]);
-            $(this).triggerHandler("poll");
-
-        }).bind("error", function(event, message) {
-            $(this).triggerHandler("poll");
-            
-        }).bind("append", function(event, message) {
-            $("ol", this).append([
-                '<li>',
-                message,
-                "</li>"].join(""));
-            this.scrollTop = $("ol", this).get(0).offsetHeight;
-
-        }).bind("poll", function(event) {
-            var self = this;
-            $.ajax({
-                url: url + "?t=" + new Date().getTime().toString(),
-                dataType: "json",
-                method: "get",
-                success: function(data) {
-                    if("ok" in data) {
-                        $(self).triggerHandler("message", [data.ok]);
-                    } else if("error" in data) {
-                        $(self).triggerHandler("error", [data.error]);
-                    } else {
-                        alert("epic fail!");
-                    }
-                }
-            });
-        }).triggerHandler("poll");
-
-        $("#chatter").submit(function(event){
-            $.ajax({
-                url: url,
-                dataType: "json",
-                type: "POST",
-                data: "message="+$("#message").val(),
-                success: function(data) {
-                    $("#message").val("").focus();
-                    var chat = $("#chat");
-                    if("ok" in data) {
-                        chat.triggerHandler("posted", [data.ok]);
-                    } else if("error" in data) {
-                        chat.triggerHandler("error", [data.error]);
-                    } else {
-                        alert("epic fail!");
-                    }
-                }
-            });
-            return false;
-        });
-
-        $("#message").attr("autocomplete", "off").focus();
-    });
-})(jQuery);
 </script>
 </body>
 </html>
