Updating provisioning for live testing

--- a/lib/erlang/cloudpanel/priv/www/index.html
+++ b/lib/erlang/cloudpanel/priv/www/index.html
@@ -1,58 +1,34 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
-   "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
-<head>
-    <title>MochiWeb - chat</title>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8">
-    <style type="text/css">
-.js .nojs{display:none;}
-
-html, body {margin:0;padding:0;}
-body {background:#fff;color:#222;font:62.5% "Helvetica Neue",Helvetica,Arial,sans-serif;text-align:center;}
-#doc {text-align:left;margin:0 auto;font-size:2em;width:40em;}
-#header {text-align:center;margin:2em 0;}
-#header * {margin:0;}
-#header h1 {color:#333;}
-h1, h2, h3 {letter-spacing:-1px;}
-
-.source {font-size:.8em;color:#000;}
-pre {font-size:.9em;background-color:#ffc;overflow-x:auto;}
-pre em {color:#009;}
-pre b {color:#900;}
-pre strong {color:#099;}
-pre i,
-pre i *{color:#090;}
-
-/* Chat */
-#chat {border:2px solid #000;width:100%;height:20em;overflow:auto;}
-#chat ol {margin:0px;padding:5px;list-style:none;}
-#chat li {border-bottom:1px solid #eee;padding:5px 10px;}
-#chat .error {color:#f00;}
-
-#chatter {padding:5px;}
-#chatter label {color:#999;width:18%;text-align:right;display:block;float:left;line-height:1.5em;}
-#chatter input {width:60%;font-size:1em;margin:0 2px;}
-#chatter .submit {width:auto;width:18%;}
-    </style>
-    <script type="text/javascript">
-        document.documentElement.className = "js";
-    </script>
-</head>
-<body>
-    <div id="doc">
-
-        <div id="header">
-            <h1><a href=".">PoolParty Cloud Panel</a></h1>
-            <p>powered by PoolParty.</p>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+  <head>
+    <title>CloudPanel</title>
+    <link href="stylesheets/application.css" media="all" rel="stylesheet" type="text/css"/><link href="stylesheets/classes.css" media="all" rel="stylesheet" type="text/css"/><link href="stylesheets/colors.css" media="all" rel="stylesheet" type="text/css"/><link href="stylesheets/nav.css" media="all" rel="stylesheet" type="text/css"/>
+  </head>
+  <body>
+    <div id='container'>
+      <div id='top'>
+        <h1><span class="blue">Cloud</span><span class="dark">Panel</span></h1>
+      </div>
+      <div id='content'>
+        <div id='nav'>
+          <h3>Actions</h3>
+          <div id='navmenu'>
+            <ul>
+              <li>
+                <a href='#soon'>Check it out</a>
+              </li>
+              <li>
+                <a href='#soon'>More stuff</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div id="content">
-        </div>
-
-        <div id="footer">
-        </div>
+        <h3>CloudPanel</h3>
+        <div class='clear'>&nbsp;</div>
+      </div>
+      <div id='footer'>
+        Copyright - Ari Lerner - 2008 - CitrusByte Labs
+      </div>
     </div>
-<script type="text/javascript" src="javascripts/jquery.js"></script>
-<script type="text/javascript" id="script">
-</script>
-</body>
+  </body>
 </html>
