--- a/lib/erlang/cloudpanel/priv/www/index.html
+++ b/lib/erlang/cloudpanel/priv/www/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>CloudPanel</title>
     <link href="/stylesheets/application.css" media="all" rel="stylesheet" type="text/css"/><link href="stylesheets/classes.css" media="all" rel="stylesheet" type="text/css"/><link href="stylesheets/colors.css" media="all" rel="stylesheet" type="text/css"/><link href="stylesheets/nav.css" media="all" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" charset="utf-8" src="javascrites/jquery.js" /><script type="text/javascript" charset="utf-8" src="javascrites/site.js" />
   </head>
   <body>
     <div id='container'>
