Quick coming soon update

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-/var/data/github/releases/20090327223537/app/views/layouts/pages_template.html
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+  "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <title>PoolParty!</title>
+    
+  </head>
+  <body id="index">
+    <h2>More coming sooooon</h2>
+    
+    <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+    try {
+    var pageTracker = _gat._getTracker("UA-8105436-2");
+    pageTracker._trackPageview();
+    } catch(err) {}</script>
+  </body>
+</html>
