--- a/index.html
+++ b/index.html
@@ -1,22 +1,112 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-  "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>PoolParty!</title>
-    
+    <link href="stylesheets/application.css" media="all" rel="stylesheet" type="text/css"/><link href="stylesheets/blackboard.css" media="all" rel="stylesheet" type="text/css"/><link href="stylesheets/classes.css" media="all" rel="stylesheet" type="text/css"/><link href="stylesheets/header.css" media="all" rel="stylesheet" type="text/css"/><link href="stylesheets/navmenu.css" media="all" rel="stylesheet" type="text/css"/><link href="stylesheets/sunburst.css" media="all" rel="stylesheet" type="text/css"/>
   </head>
-  <body id="index">
-    <h2>More coming sooooon</h2>
-    
-    <script type="text/javascript">
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-    try {
-    var pageTracker = _gat._getTracker("UA-8105436-2");
-    pageTracker._trackPageview();
-    } catch(err) {}</script>
+  <body>
+    <div id='wrapper'>
+      <div id='masthead'>
+        <h2>CitrusByte Labs</h2>
+        <div id='external_links'>
+          <!-- =link (img("/images/site/logo.gif"), "http://citrusbyte.com") -->
+        </div>
+      </div>
+      <div class='spacer clear'>
+        &nbsp;
+      </div>
+      <div id='sidebar'>
+        <h3><a href="/"><img alt="Pplogo2" src="/images/site/pplogo2.png"/></a></h3>
+        <ul class='left'>
+          <li class='home'>
+            <a href="/">Home</a>
+          </li>
+          <li class='docs'>
+            <a href="docs.html">Docs</a>
+          </li>
+          <li class='examples'>
+            <a href="examples.html">Examples</a>
+          </li>
+        </ul>
+        <ul class='left'>
+          <li class='community'>
+            <a href="community.html">Community</a>
+          </li>
+          <li class='tutorials'>
+            <a href="tutorials.html">Tutorials</a>
+          </li>
+          <li class='plugins'>
+            <a href="plugins.html">Plugins</a>
+          </li>
+        </ul>
+      </div>
+      <div class='spacer clear'>
+        &nbsp;
+      </div>
+      <div id='content'>
+        <p class='intro'>
+          PoolParty makes it easy to use the power of cloud computing to power your application. PoolParty enables you to create web applications running on cloud computing services such as Amazon EC2 with built-in scaling, monitoring, load-balancing and much more.
+        </p>
+        <div class='desc'>
+          <p class='clear'>
+            <a href='http://github.com/auser/poolparty-apache2-plugin/tree/master' name='Apache plugin'><img alt="Tasty syntax 2" src="images/tasty_syntax_2.png"/></a>
+            <a href='http://github.com/auser/poolparty/tree/master/lib/poolparty/base_packages/haproxy.rb' name='Haproxy Packages'><img alt="Tasty syntax 4" src="images/tasty_syntax_4.png"/></a>
+            <a href='http://reductivelabs.com/trac/puppet' name='Puppet base'><img alt="Tasty syntax 3" src="images/tasty_syntax_3.png"/></a>
+            <a href='http://github.com/auser/poolparty/tree/master/lib/poolparty/net/remote_bases/ec2.rb' name='Remoter base'><img alt="Tasty syntax 1" src="images/tasty_syntax_1.png"/></a>
+          </p>
+        </div>
+        <div class='block'>
+          <h3>Simple, easy configuration</h3>
+          <p>A single-file poolspec configuration file allows you to verbosely describes exactly how your cloud should be setup.</p>
+        </div>
+        <div class='block'>
+          <h3>Extensible, extendable and plug and play</h3>
+          <p>PoolParty helps you build your cloud the way you want and gives you the ability to easily extend it to include your own requirements and software.</p>
+        </div>
+        <div class='block'>
+          <h3>Options options and more options!</h3>
+          <p>PoolParty is modularly written so that you can use it how you see fit. It is not tied to any particular service and can easily be extended to support yours.</p>
+        </div>
+        <div class='block'>
+          <h3>Inline integration</h3>
+          <p>PoolParty integrates well with the tools you already know well and work with. No need to change workflow. Simply plug in and go.</p>
+        </div>
+        <div class='left'>
+          <div class='desc'>
+            <p class='development'>
+              PoolParty offers a different style of thinking for system administration... With git-style commands, easy configuration files, generators and more, you have no excuse to not try it out! It's so simple!
+            </p>
+            <p class='puppet'>
+              Although PoolParty is developed to be extensible, it picks a few defaults for you so that you don't have to. PoolParty's default dependency resolver is
+              <a href='http://reductivelabs.com/trac/puppet/'>Puppet,</a>
+              a highly scalable, robust open-source systems administration framework. It's powerful enough for Google to be using it, why shouldn't you?
+            </p>
+            <p class='extensible'>
+              Built from the ground-up to be highly extensible, PoolParty makes it easy to add features if what you need is not already built in.
+            </p>
+          </div>
+          <p class='technologies clear'>
+            PoolParty uses
+            <a href='http://haproxy.1wt.eu/'>Haproxy</a>
+            and the
+            <a href='http://www.linux-ha.org/'>Linux High Availability's</a>
+            <a href='http://www.linux-ha.org/Heartbeat'>Heartbeat</a>
+            to manage the load-balancing and failover safety. It's extensible load monitoring system is written in the highly-scalable language erlang to give your instances maximum connectivity to your cloud.
+          </p>
+        </div>
+      </div>
+      <div id='footer'>
+        Copyright 2008 - Ari Lerner
+        <br />
+        <script type='text/javascript'>
+          var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+          document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+        </script>
+        <script type='text/javascript'>
+          var pageTracker = _gat._getTracker("UA-137009-7");
+          pageTracker._trackPageview();
+        </script>
+      </div>
+    </div>
   </body>
 </html>
