Update image paths.

--- a/tutorials/basic_plugin_tutorial.html
+++ b/tutorials/basic_plugin_tutorial.html
@@ -9,14 +9,14 @@
       <div id='masthead'>
         <h2>CitrusByte Labs</h2>
         <div id='external_links'>
-          <!-- =link (img("/images/site/logo.gif"), "http://citrusbyte.com") -->
+          <!-- =link (img("images/logo.gif"), "http://citrusbyte.com") -->
         </div>
       </div>
       <div class='spacer clear'>
         &nbsp;
       </div>
       <div id='sidebar'>
-        <h3><a href="/"><img alt="Pplogo2" src="/images/site/pplogo2.png"/></a></h3>
+        <h3><a href="/"><img alt="Pplogo2" src="../images/images/site/pplogo2.png"/></a></h3>
         <ul class='left'>
           <li class='home'>
             <a href="/">Home</a>
