--- a/tutorials/getting_started_on_ec2.html
+++ b/tutorials/getting_started_on_ec2.html
@@ -9,14 +9,14 @@
       <div id='masthead'>
         <h2>CitrusByte Labs</h2>
         <div id='external_links'>
-          <!-- =link (img("/images/site/logo.gif"), "http://citrusbyte.com") -->
+          <!-- =link (img("images/logo.gif"), "http://citrusbyte.com") -->
         </div>
       </div>
       <div class='spacer clear'>
         &nbsp;
       </div>
       <div id='sidebar'>
-        <h3><a href="/"><img alt="Pplogo2" src="/images/site/pplogo2.png"/></a></h3>
+        <h3><a href="/"><img alt="Pplogo2" src="../images/images/site/pplogo2.png"/></a></h3>
         <ul class='left'>
           <li class='home'>
             <a href="/">Home</a>
@@ -56,7 +56,7 @@
               link. If you already have an aws account, log in and skip the next step.
             </li>
             <div class='right'>
-              <a href="http://www.amazon.com/gp/aws/registration/registration-form.html"><img alt="Signup" src="/images/tutorials/ec2/signup.png"/></a>
+              <a href="http://www.amazon.com/gp/aws/registration/registration-form.html"><img alt="Signup" src="../images/images/tutorials/ec2/signup.png"/></a>
             </div>
             <li>
               Sign up and validate your account
