Update some more links to be relative

--- a/community.html
+++ b/community.html
@@ -7,19 +7,19 @@
   <body>
     <div id='wrapper'>
       <div id='masthead'>
-        <h2>CitrusByte Labs</h2>
+        <h2>AT&T Interactive R&D</h2>
         <div id='external_links'>
-          <!-- =link (img("images/logo.gif"), "http://citrusbyte.com") -->
+          <!-- =link (img("attir_and_d_logo.gif"), "http://poolpartyrb.com") -->
         </div>
       </div>
       <div class='spacer clear'>
         &nbsp;
       </div>
       <div id='sidebar'>
-        <h3><a href="/"><img alt="Pplogo2" src="images/images/site/pplogo2.png"/></a></h3>
+        <h3><a href="/"><img alt="Pplogo2" src="images/site/pplogo2.png"/></a></h3>
         <ul class='left'>
           <li class='home'>
-            <a href="/">Home</a>
+            <a href="index">Home</a>
           </li>
           <li class='docs'>
             <a href="docs.html">Docs</a>
