--- a/tutorials/getting_started_on_ec2.html
+++ b/tutorials/getting_started_on_ec2.html
@@ -7,19 +7,19 @@
   <body>
     <div id='wrapper'>
       <div id='masthead'>
-        <h2>CitrusByte Labs</h2>
+        <h2>AT&T Interactive R&D</h2>
         <div id='external_links'>
-          <!-- =link (img("images/logo.gif"), "http://citrusbyte.com") -->
+          <!-- =link (img("attir_and_d_logo.gif"), "http://poolpartyrb.com") -->
         </div>
       </div>
       <div class='spacer clear'>
         &nbsp;
       </div>
       <div id='sidebar'>
-        <h3><a href="/"><img alt="Pplogo2" src="../images/images/site/pplogo2.png"/></a></h3>
+        <h3><a href="/"><img alt="Pplogo2" src="../images/site/pplogo2.png"/></a></h3>
         <ul class='left'>
           <li class='home'>
-            <a href="/">Home</a>
+            <a href="../index">Home</a>
           </li>
           <li class='docs'>
             <a href="../docs.html">Docs</a>
@@ -56,30 +56,30 @@
               link. If you already have an aws account, log in and skip the next step.
             </li>
             <div class='right'>
-              <a href="http://www.amazon.com/gp/aws/registration/registration-form.html"><img alt="Signup" src="../images/images/tutorials/ec2/signup.png"/></a>
+              <a href="http://www.amazon.com/gp/aws/registration/registration-form.html"><img alt="Signup" src="../images/tutorials/ec2/signup.png"/></a>
             </div>
             <li>
               Sign up and validate your account
             </li>
             <li>
               Once you've signed up or signed in, hover over the product's menu and click on Elastic Computing Cloud.
-              <a href="http://aws.amazon.com/ec2/"><img alt="Service ec2" src="/images/tutorials/ec2/service_ec2.png"/></a>
+              <a href="http://aws.amazon.com/ec2/"><img alt="Service ec2" src="/tutorials/ec2/service_ec2.png"/></a>
             </li>
             <li>
               Then, click on the Sign up for Amazon EC2 button to sign up for the ec2 service
-              <img alt="Ec2 button" src="/images/tutorials/ec2/ec2_button.png"/>
+              <img alt="Ec2 button" src="/tutorials/ec2/ec2_button.png"/>
             </li>
             <li>
               Now, once you have access to ec2, get your access identifiers by hovering over Your Account in the menu and clicking on Access Identifiers
-              <img alt="Access ids" src="/images/tutorials/ec2/access_ids.png"/>
+              <img alt="Access ids" src="../images/tutorials/ec2/access_ids.png"/>
             </li>
             <li>
               Scroll down the page and find the box titled "Access Key ID and Secret Access Key," In the box, you should see a box titled "Your Access Key ID." Make note of this string.
-              <img alt="Access key id" src="/images/tutorials/ec2/access_key_id.png"/>
+              <img alt="Access key id" src="../images/tutorials/ec2/access_key_id.png"/>
             </li>
             <li>
               Scroll down a little further and find the box titled "Your Secret Access Key." This box is hidden for security reasons, so you'll have to click on the show link. Make note of this string as well.
-              <img alt="Secret access key id" src="/images/tutorials/ec2/secret_access_key_id.png"/>
+              <img alt="Secret access key id" src="../images/tutorials/ec2/secret_access_key_id.png"/>
             </li>
           </ol>
           <div class='clear'>
