more relative url link updates.

--- a/plugins.html
+++ b/plugins.html
@@ -16,10 +16,10 @@
         &nbsp;
       </div>
       <div id='sidebar'>
-        <h3><a href="/"><img alt="Pplogo2" src="images/site/pplogo2.png"/></a></h3>
+        <h3><a href="index.html"><img alt="Pplogo2" src="images/site/pplogo2.png"/></a></h3>
         <ul class='left'>
           <li class='home'>
-            <a href="index">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li class='docs'>
             <a href="docs.html">Docs</a>
@@ -63,12 +63,12 @@
           Also, if you have a plugin request,
           <a href="mailto:ari.lerner@citrusbyte.com">contact me</a>
           and we'll see if we can get it going with you! Be sure to check out the
-          <a href="/tutorials/basic_plugin_tutorial.html">Basic Plugin Tutorial</a>
+          <a href="tutorialsbasic_plugin_tutorial.html">tutorials/Basic Plugin Tutorial</a>
           for more plugin help
         </p>
       </div>
       <div id='footer'>
-        Copyright 2008 - Ari Lerner
+        Copyright 2008 - Ari Lerner & Cloudteam@ATTinteractive
         <br />
         <script type='text/javascript'>
           var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
