--- a/tutorials/getting_started.html
+++ b/tutorials/getting_started.html
@@ -16,10 +16,10 @@
         &nbsp;
       </div>
       <div id='sidebar'>
-        <h3><a href="/"><img alt="Pplogo2" src="../images/site/pplogo2.png"/></a></h3>
+        <h3><a href="../index.html"><img alt="Pplogo2" src="../images/site/pplogo2.png"/></a></h3>
         <ul class='left'>
           <li class='home'>
-            <a href="../index">Home</a>
+            <a href="../index.html">Home</a>
           </li>
           <li class='docs'>
             <a href="../docs.html">Docs</a>
@@ -87,7 +87,7 @@
           The full list can be found
           <a href="../lib/resources.html">Resources</a>
           There are also
-          <a href="/lib/built_in_helpers.html">Built in helpers</a>
+          <a href="../libbuilt_in_helpers.html">lib/Built in helpers</a>
           that you can use in your spec.
         </p>
         <p>
@@ -115,7 +115,7 @@
         <p>
           Now we are ready to play with the cloud!
         </p>
-        <h4><a href="/lib/cloud_speak.html">Cloud Speak</a></h4>
+        <h4><a href="../libcloud_speak.html">lib/Cloud Speak</a></h4>
         <p>
           Once you have your pool spec at a comfortable spot, it's time to get your cloud launched.
           <pre class="blackboard"><span class="line-numbers">   1 </span> cloud start --name app</pre>
@@ -144,7 +144,7 @@
         </p>
       </div>
       <div id='footer'>
-        Copyright 2008 - Ari Lerner
+        Copyright 2008 - Ari Lerner & Cloudteam@ATTinteractive
         <br />
         <script type='text/javascript'>
           var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
