--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         &nbsp;
       </div>
       <div id='sidebar'>
-        <h3><a href="/"><img alt="Pplogo2" src="images/site/pplogo2.png"/></a></h3>
+        <h3><a href="index.html"><img alt="Pplogo2" src="images/site/pplogo2.png"/></a></h3>
         <ul class='left'>
           <li class='home'>
-            <a href="index">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li class='docs'>
             <a href="docs.html">Docs</a>
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div id='footer'>
-        Copyright 2008 - Ari Lerner
+        Copyright 2008 - Ari Lerner & Cloudteam@ATTinteractive
         <br />
         <script type='text/javascript'>
           var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
