more relative links fixed.

--- a/docs.html
+++ b/docs.html
@@ -52,7 +52,7 @@
         <h2>References</h2>
         <p>
           <ul>
-            <li><a href="lib/resources">Resources</a></li>
+            <li><a href="lib/resources.html">Resources</a></li>
             <li><a href="lib/cloud_speak">Cloud Speak</a></li>
           </ul>
         </p>
