--- a/plugins.html
+++ b/plugins.html
@@ -63,7 +63,7 @@
           Also, if you have a plugin request,
           <a href="mailto:ari.lerner@citrusbyte.com">contact me</a>
           and we'll see if we can get it going with you! Be sure to check out the
-          <a href="tutorialsbasic_plugin_tutorial.html">tutorials/Basic Plugin Tutorial</a>
+          <a href="./tutorials/basic_plugin_tutorial.html">Basic Plugin Tutorial/</a>
           for more plugin help
         </p>
       </div>
