Rename website lib directory to docs and add to the repo.

--- a/docs.html
+++ b/docs.html
@@ -52,8 +52,8 @@
         <h2>References</h2>
         <p>
           <ul>
-            <li><a href="lib/resources.html">Resources</a></li>
-            <li><a href="lib/cloud_speak">Cloud Speak</a></li>
+            <li><a href="docs/resources.html">Resources</a></li>
+            <li><a href="docs/cloud_speak">Cloud Speak</a></li>
           </ul>
         </p>
         <h3>
