--- a/tutorials/basic_plugin_tutorial.html
+++ b/tutorials/basic_plugin_tutorial.html
@@ -51,7 +51,7 @@
         <h3>First steps</h3>
         <p>
           You have a bunch of resources (unlimited amount considering you can create your own, but that's out of the scope for this tutorial) at your disposal to use on your server. These are described more in-depth
-          <a href="../lib/Resources">here</a>
+          <a href="../docs/Resources">here</a>
           <small class='note'>Thanks to benburkert, a plugin generator is in progress!</small>
         </p>
         <p>
@@ -81,7 +81,7 @@
           First, you'll notice that there are some lines with
           <strong>has_package</strong>
           This tells your nodes and instances that they make sure they have these packages and if not, that they should be installed (installed with the preferred package manager). These are called "Resources." There is a list of the available
-          <a href="../libresources.html">lib/Resources</a>
+          <a href="../docsresources.html">docs/Resources</a>
           here. Note that they can be preceeded by either has_ or does_not_have_, which does exactly what it sounds like. has_ sends a present notice to the resource and does_not_have_ sends an absent notice to the resource.
         </p>
         <h3>Setup</h3>
