--- a/tutorials/getting_started.html
+++ b/tutorials/getting_started.html
@@ -79,15 +79,15 @@
         </p>
         <p>
           From within this cloud block is where you describe your server setup. You there are a quite few built-in
-          <a href="../lib/resources.html">Resources</a>
+          <a href="../docs/resources.html">Resources</a>
           that you can describe here, for instance for a git repository
           <pre class="blackboard"><span class="line-numbers">   1 </span> <span class="Entity">has_git</span>({<span class="Constant"><span class="Constant">:</span>name</span> =&gt; <span class="String"><span class="String">&quot;</span>poolpartyrepos<span class="String">&quot;</span></span>, &#x000A;<span class="line-numbers">   2 </span> 	<span class="Constant"><span class="Constant">:</span>source</span> =&gt; <span class="String"><span class="String">&quot;</span>git://github.com/auser/poolparty-website.git<span class="String">&quot;</span></span>, &#x000A;<span class="line-numbers">   3 </span> 	<span class="Constant"><span class="Constant">:</span>at</span> =&gt; <span class="String"><span class="String">&quot;</span>/var/www/poolpartyrb.com<span class="String">&quot;</span></span>})</pre>
           or a file
           <pre class="blackboard"><span class="line-numbers">   1 </span> <span class="Entity">has_file</span>(<span class="Constant"><span class="Constant">:</span>name</span> =&gt; <span class="String"><span class="String">&quot;</span>/var/www/index.html<span class="String">&quot;</span></span>, <span class="Constant"><span class="Constant">:</span>content</span> =&gt; <span class="String"><span class="String">&quot;</span>&lt;h2&gt;Hello world&lt;/h2&gt;<span class="String">&quot;</span></span>)</pre>
           The full list can be found
-          <a href="../lib/resources.html">Resources</a>
+          <a href="../docs/resources.html">Resources</a>
           There are also
-          <a href="../libbuilt_in_helpers.html">lib/Built in helpers</a>
+          <a href="../docsbuilt_in_helpers.html">docs/Built in helpers</a>
           that you can use in your spec.
         </p>
         <p>
@@ -115,7 +115,7 @@
         <p>
           Now we are ready to play with the cloud!
         </p>
-        <h4><a href="../libcloud_speak.html">lib/Cloud Speak</a></h4>
+        <h4><a href="../docscloud_speak.html">docs/Cloud Speak</a></h4>
         <p>
           Once you have your pool spec at a comfortable spot, it's time to get your cloud launched.
           <pre class="blackboard"><span class="line-numbers">   1 </span> cloud start --name app</pre>
