Update website, Add has_deploy_directory page. Update getting started. add more links to the wiki.

--- a/docs.html
+++ b/docs.html
@@ -49,6 +49,10 @@
           The official documentation can be found
           <a href='http://poolparty.rubyforge.org/rdoc/'>http://poolparty.rubyforge.org/rdoc/</a>
         </p>
+        <p>
+          The wiki often has good docs at
+          <a href='http://wiki.github.com/auser/poolparty'>http://wiki.github.com/auser/poolparty</a>
+        </p>
         <h2>References</h2>
         <p>
           <ul>
@@ -68,6 +72,7 @@
             </li>
             <li>Blake Mizerany</li>
             <li>Ron "deadprogrammer" Evans</li>
+            <li>AT&T Interactive R&D</li>
             <li>
               The
               <a href='http://citrusbyte.com'>CitrusByte</a>
