--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
             <p class='development'>
               PoolParty offers a different style of thinking for system administration... With git-style commands, easy configuration files, generators and more, you have no excuse to not try it out! It's so simple!
             </p>
-            <p class='puppet'>
+            <p>
               Although PoolParty is developed to be extensible, it picks a few defaults for you so that you don't have to. PoolParty's default dependency resolver is
-              <a href='http://reductivelabs.com/trac/puppet/'>Puppet,</a>
-              a highly scalable, robust open-source systems administration framework. It's powerful enough for Google to be using it, why shouldn't you?
+              <a href='http://wiki.opscode.com/display/chef/Home'>Chef,</a></a>
+              a state based, declarative configuration management engine. You define recipes of how you want your system to look and then chef makes it so.
             </p>
             <p class='extensible'>
               Built from the ground-up to be highly extensible, PoolParty makes it easy to add features if what you need is not already built in.
