--- a/plugins.html
+++ b/plugins.html
@@ -49,7 +49,10 @@
           Where would we be without plugins? Somewhere else!
         </p>
         <p>
-          The following is a list of known, working/in-progress plugins. If you have written any plugins
+          Plugins are collections of resources.  For instance, you may want a plugin called website which might contain resources the resources has_directory '/var/www/' and has_file '/var/www/index.html'
+          The following is a list of known plugins. You can also find a list on the
+          <a><a href="http://wiki.github.com/auser/poolparty/plugin-development">wiki.</a></a>
+          If you have written any plugins
           <a href="mailto:ari.lerner@citrusbyte.com">contact me</a>
           and I'll be sure to list it here
         </p>
