--- a/tutorials/getting_started.html
+++ b/tutorials/getting_started.html
@@ -48,6 +48,10 @@
         <p>
           Congrats! You've decided to try out PoolParty, what next? Follow along as we go from zero to done! Time it, let's see how long it takes for you to have a full-blown application up on your cloud!
         </p>
+        <p>
+          <i>There are good docs that are updated more frequently on the</i>
+          <a><a href="http://wiki.github.com/auser/poolparty/installing">wiki</a></a>
+        </p>
         <h4>Installation</h4>
         <p>
           Installing poolparty is simple:
@@ -65,40 +69,35 @@
         </p>
         <h4>Pool spec</h4>
         <p>
-          Everything in your pool is decided by your spec file. This is where all the logic for your cloud will go. This can be generated with the command:
-          <pre class="blackboard"><span class="line-numbers">   1 </span> pool spec [name]</pre>
-          You will now have a spec file in the location: "name/pool.spec." There will also be a directory called plugins/. Don't worry about that now, we'll get back to the plugins directory and how to use it
+          Everything in your pool is defined by your spec file, clouds.rb. This is where all the logic for your cloud will go.  You don't have to call it clouds.rb, thats just the default name poolparty looks for.  The PoolParty binary commands will look for this clouds.rb file in your current directory, and ~/.poolparty/ as well as your environment's POOL_SPEC variable.
         </p>
         <p>
-          Although more advanced examples can be found throughout the site, we'll use a basic one to get us going. First, we can start out by making a pool.
+          We start out by making a pool.
           <pre class="blackboard"><span class="line-numbers">   1 </span> pool <span class="Constant"><span class="Constant">:</span>app</span> <span class="Keyword">do</span>&#x000A;<span class="line-numbers">   2 </span> <span class="Keyword">end</span></pre>
-          This doesn't really do anything, but it gives us a convenient wrapper around our clouds, You don't need to define a pool, but it's usually a good idea if the clouds of nodes are going to talk to each other.
+          This doesn't really do anything, but it gives us a convenient wrapper around our clouds. You don't need to define a pool, but it's usually a good idea if the clouds of nodes are going to talk to each other.  Properties set in the pool will be inherited by the contained clouds.
           Now let's make a cloud that actually does something.
-          <pre class="blackboard"><span class="line-numbers">   1 </span> pool <span class="Constant"><span class="Constant">:</span>app</span> <span class="Keyword">do</span>&#x000A;<span class="line-numbers">   2 </span>   plugin_directory <span class="String"><span class="String">&quot;</span><span class="String"><span class="String">#{</span><span class="Support">File</span><span class="String"><span class="String">.</span><span class="Entity">dirname</span></span><span class="String">(</span><span class="Variable">__FILE__</span><span class="String">)</span><span class="String">}</span></span>/plugins<span class="String">&quot;</span></span>&#x000A;<span class="line-numbers">   3 </span>   instances <span class="Constant">2</span>..<span class="Constant">5</span>&#x000A;<span class="line-numbers">   4 </span>   &#x000A;<span class="line-numbers">   5 </span>   cloud <span class="Constant"><span class="Constant">:</span>app</span> <span class="Keyword">do</span>&#x000A;<span class="line-numbers">   6 </span>     &#x000A;<span class="line-numbers">   7 </span>   <span class="Keyword">end</span>&#x000A;<span class="line-numbers">   8 </span> &#x000A;<span class="line-numbers">   9 </span> <span class="Keyword">end</span></pre>
-          Your cloud is now setup to scale from 2 instances to 5 instances at a maximum. You've defined one cloud (called app) inside the pool (called app).
+          <pre class="blackboard"><span class="line-numbers">   1 </span> pool <span class="Constant"><span class="Constant">:</span>party</span> <span class="Keyword">do</span>&#x000A;<span class="line-numbers">   2 </span>   instances <span class="Constant">2</span>..<span class="Constant">5</span>&#x000A;<span class="line-numbers">   3 </span>   &#x000A;<span class="line-numbers">   4 </span>   cloud <span class="Constant"><span class="Constant">:</span>hello</span> <span class="Keyword">do</span>&#x000A;<span class="line-numbers">   5 </span>     has_file <span class="String"><span class="String">'</span>/etc/motd<span class="String">'</span></span>,           <span class="Constant"><span class="Constant">:</span>content</span>=&gt;<span class="String"><span class="String">'</span>Welcome to your cloud!<span class="String">'</span></span>&#x000A;<span class="line-numbers">   6 </span>     has_file <span class="String"><span class="String">'</span>/var/www/index.html<span class="String">'</span></span>, <span class="Constant"><span class="Constant">:</span>content</span>=&gt;<span class="String"><span class="String">&quot;</span>Hello World<span class="String">&quot;</span></span>&#x000A;<span class="line-numbers">   7 </span>   <span class="Keyword">end</span>&#x000A;<span class="line-numbers">   8 </span> &#x000A;<span class="line-numbers">   9 </span> <span class="Keyword">end</span></pre>
+          Your cloud is now setup to scale from 2 instances to 5 instances at a maximum. You've defined one cloud (called hello) inside the pool (called party).
         </p>
         <p>
-          From within this cloud block is where you describe your server setup. You there are a quite few built-in
+          From within this cloud block you describe your server setups. There are a quite few built-in
           <a href="../docs/resources.html">Resources</a>
-          that you can describe here, for instance for a git repository
+          you can use here, for instance for a git repository
           <pre class="blackboard"><span class="line-numbers">   1 </span> <span class="Entity">has_git</span>({<span class="Constant"><span class="Constant">:</span>name</span> =&gt; <span class="String"><span class="String">&quot;</span>poolpartyrepos<span class="String">&quot;</span></span>, &#x000A;<span class="line-numbers">   2 </span> 	<span class="Constant"><span class="Constant">:</span>source</span> =&gt; <span class="String"><span class="String">&quot;</span>git://github.com/auser/poolparty-website.git<span class="String">&quot;</span></span>, &#x000A;<span class="line-numbers">   3 </span> 	<span class="Constant"><span class="Constant">:</span>at</span> =&gt; <span class="String"><span class="String">&quot;</span>/var/www/poolpartyrb.com<span class="String">&quot;</span></span>})</pre>
           or a file
           <pre class="blackboard"><span class="line-numbers">   1 </span> <span class="Entity">has_file</span>(<span class="Constant"><span class="Constant">:</span>name</span> =&gt; <span class="String"><span class="String">&quot;</span>/var/www/index.html<span class="String">&quot;</span></span>, <span class="Constant"><span class="Constant">:</span>content</span> =&gt; <span class="String"><span class="String">&quot;</span>&lt;h2&gt;Hello world&lt;/h2&gt;<span class="String">&quot;</span></span>)</pre>
-          The full list can be found
-          <a href="../docs/resources.html">Resources</a>
-          There are also
-          <a href="../docsbuilt_in_helpers.html">docs/Built in helpers</a>
-          that you can use in your spec.
         </p>
         <p>
-          Things get a lot more interesting when plugins get involved. Currently, as of the time of this writing there are plugins in the works to setup apache2, passenger, ruby on rails, postgresql, mysql and more. The plugin syntax is clear and enjoyable as well, so if you require something different, please checkout the
-          <a href="/tutorials/basic_plugin_tutorial.html">Basic Plugin Tutorial</a>
+          You can also use
+          <a>plugins</a>
+          <a href="../plugins.html">plugins</a>
+          and chef recipes in you cloud blocks
+          <pre class="blackboard"><span class="line-numbers">   1 </span> chef <span class="Keyword">do</span>&#x000A;<span class="line-numbers">   2 </span>   include_recipes <span class="String"><span class="String">&quot;</span>~/.poolparty/chef/cookbooks/*<span class="String">&quot;</span></span>&#x000A;<span class="line-numbers">   3 </span>   recipe <span class="String"><span class="String">&quot;</span>~/.poolparty/chef/rails_recipe.rb<span class="String">&quot;</span></span>&#x000A;<span class="line-numbers">   4 </span>   templates <span class="String"><span class="String">&quot;</span>~/.poolparty/chef/templates/<span class="String">&quot;</span></span>&#x000A;<span class="line-numbers">   5 </span> <span class="Keyword">end</span></pre>
         </p>
+        <p></p>
         <h4>Starting your cloud</h4>
         <p>
-          PoolParty isn't based on any remoter base itself, but can be extended to support anyt hat provides an api for starting, stopping and listing instances. The default remoter base for PoolParty is ec2. You can specify the remoter base with the command:
-          <pre class="blackboard"><span class="line-numbers">   1 </span> using <span class="Constant"><span class="Constant">:</span>ec2</span></pre>
-          in your spec file.
+          PoolParty isn't tied to a specific remoter base (i.e. cloud provider.)  It can be extended to support anything that provides an api for starting, stopping and listing instances. The default remoter base for PoolParty is ec2.
         </p>
         <p>
           To get started on ec2, go ahead and check out the
@@ -107,10 +106,9 @@
         </p>
         <h4>Interacting with your cloud</h4>
         <p>
-          If you have followed a tutorial from above, then you should be ready to interact with your cloud. Before we start it, we will need to make sure we have a key set for the clouds. Let's make note of what keypairs we need by running the command:
-          <pre class="blackboard"><span class="line-numbers">   1 </span> cloud add-keypair --listing</pre>
-          This will list the keypairs you need to have for your clouds. If you run the same command without the --listing, PoolParty will create these keypairs for you.
-          <pre class="blackboard"><span class="line-numbers">   1 </span> cloud add-keypair --verbose</pre>
+          If you have followed a tutorial from above, then you should be ready to interact with your cloud. Before we start it, we will need to make sure we have a key set for the clouds. Let's make note of what keypairs we have availble by running the command:
+          <pre class="blackboard"><span class="line-numbers">   1 </span>  ec2-describe-keypairs </pre>
+          This will list the keypairs you can use with your clouds.   By default PoolParty will use look for a keypair named id_rsa at ~/.ssh/ and ~/.ec2/ and /etc/poolparty.
         </p>
         <p>
           Now we are ready to play with the cloud!
@@ -118,19 +116,19 @@
         <h4><a href="../docscloud_speak.html">docs/Cloud Speak</a></h4>
         <p>
           Once you have your pool spec at a comfortable spot, it's time to get your cloud launched.
-          <pre class="blackboard"><span class="line-numbers">   1 </span> cloud start --name app</pre>
+          <pre class="blackboard"><span class="line-numbers">   1 </span> cloud start</pre>
         </p>
         <p>
           <ul>
-            <li>PoolParty will launch your master instance</li>
-            <li>Configure the master instance based on the values in your manifest</li>
+            <li>PoolParty will launch your instances</li>
+            <li>Configure the instance based on the properties in your manifest</li>
             <li>Install the appropriate software</li>
             <li>Start monitoring the cloud</li>
           </ul>
         </p>
         <p>
           Now, let's list the cloud and see what instances we have up...
-          <pre class="blackboard"><span class="line-numbers">   1 </span> cloud list --name app</pre>
+          <pre class="blackboard"><span class="line-numbers">   1 </span> cloud list --name hello</pre>
           Hey! What do you know? It started a new instance for us based on the minimum instances requirement
           <pre class="blackboard"><span class="line-numbers">   1 </span> *** Listing cloud app&#x000A;<span class="line-numbers">   2 </span> ****** Active instances&#x000A;<span class="line-numbers">   3 </span> master	75.101.162.232&#x000A;<span class="line-numbers">   4 </span> node1	67.202.61.184</pre>
         </p>
