--- a/tutorials/getting_started.html
+++ b/tutorials/getting_started.html
@@ -86,6 +86,15 @@
           <pre class="blackboard"><span class="line-numbers">   1 </span> <span class="Entity">has_git</span>({<span class="Constant"><span class="Constant">:</span>name</span> =&gt; <span class="String"><span class="String">&quot;</span>poolpartyrepos<span class="String">&quot;</span></span>, &#x000A;<span class="line-numbers">   2 </span> 	<span class="Constant"><span class="Constant">:</span>source</span> =&gt; <span class="String"><span class="String">&quot;</span>git://github.com/auser/poolparty-website.git<span class="String">&quot;</span></span>, &#x000A;<span class="line-numbers">   3 </span> 	<span class="Constant"><span class="Constant">:</span>at</span> =&gt; <span class="String"><span class="String">&quot;</span>/var/www/poolpartyrb.com<span class="String">&quot;</span></span>})</pre>
           or a file
           <pre class="blackboard"><span class="line-numbers">   1 </span> <span class="Entity">has_file</span>(<span class="Constant"><span class="Constant">:</span>name</span> =&gt; <span class="String"><span class="String">&quot;</span>/var/www/index.html<span class="String">&quot;</span></span>, <span class="Constant"><span class="Constant">:</span>content</span> =&gt; <span class="String"><span class="String">&quot;</span>&lt;h2&gt;Hello world&lt;/h2&gt;<span class="String">&quot;</span></span>)</pre>
+          The full list can be found
+          <a href="/lib/resources.html">Resources</a>
+          There are also
+          <a href="/lib/built_in_helpers.html">Built in helpers</a>
+          that you can use in your spec.
+        </p>
+        <p>
+          Things get a lot more interesting when plugins get involved. Currently, as of the time of this writing there are plugins in the works to setup apache2, passenger, ruby on rails, postgresql, mysql and more. The plugin syntax is clear and enjoyable as well, so if you require something different, please checkout the
+          <a href="/tutorials/basic_plugin_tutorial.html">Basic Plugin Tutorial</a>
         </p>
         <p>
           You can also use
@@ -101,7 +110,7 @@
         </p>
         <p>
           To get started on ec2, go ahead and check out the
-          <a href="../tutorials/getting_started_on_ec2">Getting started on ec2</a>
+          <a href="/tutorials/getting_started_on_ec2.html">Getting started on ec2</a>
           tutorial. Don't worry, this tutorial will be here when you get back.
         </p>
         <h4>Interacting with your cloud</h4>
