--- a/why.html
+++ b/why.html
@@ -44,20 +44,14 @@
         &nbsp;
       </div>
       <div id='content'>
-        <h2>Community</h2>
-        <h4>Users</h4>
-        <ul>
-          <li><a href="http://groups.google.com/group/poolpartyrb/">Google Groups</a></li>
-        </ul>
-        <h4>Developers</h4>
-        <ul>
-          <li><a href="http://poolpartyrb.lighthouseapp.com/projects/18621-poolparty/overview">Lighthouse bug tracker</a></li>
-          <li>
-            <a href="irc://irc.freenode.net/poolpartyrb">#poolpartyrb</a>
-            on irc.freenode.net
-          </li>
-          <li><a href="http://irclogger.com/poolpartyrb/">Archived irc discussions</a></li>
-        </ul>
+        * decouples your cloud management from a particular cloud provider
+        * free and opensource
+        * core team
+        * industry standard defaults, apache, haproxy, etc
+        * easy to use
+        * extensible
+        * chef
+        * philosophy of integration
       </div>
       <div id='footer'>
         Copyright 2008 - Ari Lerner & Cloudteam@ATTinteractive
