--- a/community.html
+++ b/community.html
@@ -46,7 +46,7 @@
         <div class='tip-box'><div class='crab-wrapper'><img src='http://fairchild.github.com/poolparty/images/site/i/examples.png' class='crab'/></div>The IRC channel
         <tt>#poolparty</tt>
         is active and friendly. If you are able to use IRC, come on in!
-        <a href="http://widget.mibbit.com/?settings=b5a91d807861e012ebea4a56f391f35c&server=simmons.freenode.net&chi;annel=%23poolpartyrb" target="new">Launch IRC in your browser</a></div>
+        <a href="http://widget.mibbit.com/?settings=21f1cdbd39aa070f84ce9bdb0f7bd3d6&server=irc.freenode.net&channel=%23poolpartyrb&noServerNotices=true&autoConnect=true" target="new">Launch IRC in your browser</a></div>
         <div class='callout'>
           New to IRC? No problem. Click to
           <a href="http://widget.mibbit.com/?settings=b5a91d807861e012ebea4a56f391f35c&server=simmons.freenode.net&chi;annel=%23poolpartyrb" target="new">launch #poolpartyrb IRC channel in your browser!</a>
