Fixed irc url 2nd one

--- a/community.html
+++ b/community.html
@@ -49,7 +49,7 @@
         <a href="http://widget.mibbit.com/?settings=21f1cdbd39aa070f84ce9bdb0f7bd3d6&server=irc.freenode.net&channel=%23poolpartyrb&noServerNotices=true&autoConnect=true" target="new">Launch IRC in your browser</a></div>
         <div class='callout'>
           New to IRC? No problem. Click to
-          <a href="http://widget.mibbit.com/?settings=b5a91d807861e012ebea4a56f391f35c&server=simmons.freenode.net&chi;annel=%23poolpartyrb" target="new">launch #poolpartyrb IRC channel in your browser!</a>
+          <a href="http://widget.mibbit.com/?settings=21f1cdbd39aa070f84ce9bdb0f7bd3d6&server=irc.freenode.net&channel=%23poolpartyrb&noServerNotices=true&autoConnect=true" target="new">launch #poolpartyrb IRC channel in your browser!</a>
         </div>
         <ul>
           <li><a href="http://groups.google.com/group/poolpartyrb/">Google Groups</a></li>
