--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <a href='http://wiki.github.com/auser/poolparty/installing'>this page</a>
         for instructions on development installation</div>
         <p class='step'>
-          <pre class="blackboard">  gem install --source http://gems.github.com auser-poolparty&#x000A;</pre>
+          <pre class="blackboard">  gem install auser-poolparty&#x000A;</pre>
         </p>
         <h2>
           2. Write your clouds.rb
